<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Egal File Manager</string>
    <string name="home">Home</string>
    <string name="impostazioni">Settings</string>
    <string name="about">About</string>
    <string name="archivio_locale">Local storage</string>
    <string name="memoria_interna">Internal storage</string>
    <string name="memoria_esterna">External storage</string>
    <string name="root_directory">Root folder</string>
    <string name="categorie">Categories</string>
    <string name="categorie_immagini">Images</string>
    <string name="categorie_video">Video</string>
    <string name="categorie_audio">Audio</string>
    <string name="categorie_altro">Others</string>
    <string name="altri_percorsi_di_archiviazione">Other storage locations</string>
    <string name="ordina_per">Sort by:</string>
    <string name="ordina_per_nome">Name</string>
    <string name="ordina_per_dimensione">Size</string>
    <string name="ordina_per_data">Date</string>
    <string name="ordina_per_tipo">Type</string>
    <string name="ordina_per_elementi">Number of items</string>
    <string name="ordina_per_percorso">Path</string>
    <string name="tipo_ordinamento">Sorting type:</string>
    <string name="ordinamento_crescente">Ascending</string>
    <string name="ordinamento_decrescente">Descending</string>
    <string name="disponi">Arrange</string>
    <string name="organizza_per">Arrange by</string>
    <string name="organizza_per_cartella">Folder name</string>
    <string name="organizza_per_album">Album name</string>
    <string name="copia">Copy</string>
    <string name="taglia">Cut</string>
    <string name="incolla">Paste</string>
    <string name="copia_in">Copy to</string>
    <string name="sposta_in">Move to</string>
    <string name="origine">Source:</string>
    <string name="destinazione">Destination:</string>
    <string name="totale">Total:</string>
    <string name="spazio_insufficiente">Insufficient space!</string>
    <string name="copia_in_corso">Copy %s in progress…</string>
    <string name="elementi_negli_appunti">%s elements in the clipboard</string>
    <string name="files_copiati">%s elements copied successfully</string>
    <string name="files_non_copiati">Error copying some items:</string>
    <string name="cartella_interna">The destination folder is inside the source folder!</string>
    <string name="clipboard">Clipboard</string>
    <string name="mostra_contentuto_clipboard">Show clipboard content</string>
    <string name="cancella_clipboard">Empty the clipboard</string>
    <string name="clipboard_vuota">Clipboard is empty</string>
    <string name="applica_a_tutti">Apply to all</string>
    <string name="file_esistente">The %s file already exists</string>
    <string name="sovrascrivi">Overwrite</string>
    <string name="sovrascrivi_cartella">The %s folder already exists. Do you want to overwrite its content?</string>
    <string name="sovrascrivi_file">The %s file already exists. Do you want to overwrite it?</string>
    <string name="rinomina">Rename</string>
    <string name="ignora">Ignore</string>
    <string name="elimina">Delete</string>
    <string name="eliminazione_in_corso">Deletion %s in progress…</string>
    <string name="conferma_eliminazione1">Do you really want to delete %s?</string>
    <string name="conferma_eliminazione2">Do you really want to delete %s items?</string>
    <string name="files_eliminati">%s items successfully deleted</string>
    <string name="files_non_eliminati">An error occurred while deleting some items:</string>
    <string name="operazione_annulata">Operation canceled!</string>
    <string name="nome_non_valido">Name is not valid!</string>
    <string name="cartella_gia_esistente">Folder already exists</string>
    <string name="impossibile_creare_cartella">Could not create folder</string>
    <string name="cartella_creata">Folder created successfully</string>
    <string name="nuovo_nome">New name</string>
    <string name="files_rinominati">%s elements successfully renamed</string>
    <string name="file_gia_presente">File already exists</string>
    <string name="files_non_rinominati">Impossible to rename the following elements:</string>
    <string name="rinominazione_in_corso">Renaming %s in progress…</string>
    <string name="files_spostati">%s items moved successfully</string>
    <string name="spostamento">Relocation</string>
    <string name="cartella_vuota">Empty folder</string>
    <string name="permesso_lettura_scrittura">Permission is required to read/write files</string>
    <string name="permessi_scheda_autorizzazioni">Go to the \'Permissions\' tab and grant the required permissions.</string>
    <string name="aggiorna">Update</string>
    <string name="filtro">Filter</string>
    <string name="elementi">items</string>
    <string name="ordina">Sort</string>
    <string name="lettura_dati_cartelle">Reading folder data…</string>
    <string name="visualizzazione">Visualization</string>
    <string name="visualizzazione_lista">List</string>
    <string name="visualizzazione_lista_piccola">Small list</string>
    <string name="visualizzazione_griglia">Grid</string>
    <string name="visualizzazione_anteprima">Preview</string>
    <string name="apri_con">Open with</string>
    <string name="apri_come">Open as</string>
    <string name="usa_sempre_questa_app">Always use this app to open this type of file</string>
    <string name="associazione_files">File associations</string>
    <string name="nessuna_associazione_files">No file associations found</string>
    <string name="ripristina_predefiniti">Restore defaults</string>
    <string name="ripristinare_associazioni_predefinite">Do you really want to restore default associations?</string>
    <string name="messaggio_cancellazione_associazione">Do you really want to delete this association?</string>
    <string name="lettura_lista_applicazioni">Reading application list…</string>
    <string name="testo">Text</string>
    <string name="immagine">Image</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="altro">Other</string>
    <string name="seleziona_tutto">Select all</string>
    <string name="deseleziona_tutto">Deselect all</string>
    <string name="nuova_cartella">New folder</string>
    <string name="directory">Directory</string>
    <string name="file">File</string>
    <string name="directories">directories</string>
    <string name="files">files</string>
    <string name="collegamento">Link</string>
    <string name="seleziona_storage">Select storage</string>
    <string name="autorizzazione_memorie_esterne">Please choose the root directory of your external memory to grant the permissions.</string>
    <string name="nessuna_autorizzazione_esterna">You cannot write in your external memory until you grant permission.</string>
    <string name="tree_uri_extsd_non_valido">The selected folder is not valid! You must select the root folder of the external memory.</string>
    <string name="proprieta">Property</string>
    <string name="tipo2">Type:</string>
    <string name="contenuto">Content:</string>
    <string name="percorso">Path:</string>
    <string name="dimensione2">Size:</string>
    <string name="ultima_modifica">Last modified:</string>
    <string name="permessi">Permissions:</string>
    <string name="lettura">reading</string>
    <string name="scrittura">writing</string>
    <string name="nascosto">Hidden:</string>
    <string name="bytes">bytes</string>
    <string name="selezione_multipla">Multiple selection</string>
    <string name="visibilita_modificata">Visibility modified</string>
    <string name="seleziona_destinazione">Select destination</string>
    <string name="cartella_superiore">Up folder</string>
    <string name="salva">Save</string>
    <string name="nome_file">File name:</string>
    <string name="errore_salvataggio">Error saving the file</string>
    <string name="nessun_elemento_trovato">No item found</string>
    <string name="album_pdf">PDF</string>
    <string name="album_documenti">Documents</string>
    <string name="album_fogli_calcolo">Spreadsheets</string>
    <string name="album_compressi">Compressed files</string>
    <string name="album_testo">Text</string>
    <string name="album_apk">APK</string>
    <string name="aggiornamento_media_library">Updating Media Library…</string>
    <string name="condividi">Share</string>
    <string name="preferiti">Favorites</string>
    <string name="aggiungi_a_preferiti">Add to favorites</string>
    <string name="domanda_rimuovi_preferito">Do you really want to remove %s from your favorites?</string>
    <string name="preferito_non_esistente">%s no longer exists. Would you like to remove it from your favorites?</string>
    <string name="preferito_aggiunto">Added to favorites</string>
    <string name="nuovo">New</string>
    <string name="seleziona_label_storage">Select storage with label %s</string>
    <string name="impossibile_completare_operazione">Unable to complete the operation</string>
    <string name="esecuzione">execution</string>
    <string name="permesso_proprietario">Owner:</string>
    <string name="permesso_gruppo">Group:</string>
    <string name="permesso_altro">Other:</string>
    <string name="modifica">Edit</string>
    <string name="nuovo_file">New file</string>
    <string name="file_creato_con_successo">File created successfully</string>
    <string name="impossibile_creare_file">Could not create file</string>
    <string name="impossibile_riprodurre">Unable to play the file!</string>
    <string name="storage_to_scan">Select storage to scan:</string>
    <string name="scansione_media_library_terminata">Media Library scan completed</string>
    <string name="no_smb_to_ftp">Unable to copy from an SMB server to an FTP server</string>
    <string name="no_ftp_to_smb">Unable to copy from an FTP server to an SMB server</string>
    <string name="annullamento_operazione">Cancel operation…</string>
    <string name="troppi_elementi_da_gestire">Too many items to manage</string>
    <string name="storages">Storages:</string>
    <string name="notif_id_operazioni_varie">Operation completed</string>
    <string name="notif_id_operazioni_backgroung">Operations in background</string>
    <string name="operazione_terminata">Operation completed</string>
    <string name="configura_widget">Widget configuration</string>
    <string name="crea_collegamento">Link to file</string>
    <string name="aggiungi_collegamento_home">Add link to home</string>
    <string name="elemento_non_trovato">Element not found</string>
    <string name="egal_zip_viewer">Egal Zip Viewer</string>
    <string name="egal_salva_file">Egal Save File</string>
    <string name="egal_text_editor">Egal Text Editor</string>
    <string name="egal_image_viewer">Egal Image Viewer</string>
    <string name="dimensione_testo">Text size</string>
    <string name="ricerca">Search</string>
    <string name="salva_con_nome">Save with name</string>
    <string name="ruota_destra">Rotate right</string>
    <string name="ruota_sinistra">Rotate left</string>
    <string name="imposta_come_sfondo">Set as wallpaper</string>
    <string name="presentazione">Presentation</string>
    <string name="aggiungi_a_playlist">Add to playlist</string>
    <string name="salva_playlist">Save playlist</string>
    <string name="rimuovi_tutto">Remove all</string>
    <string name="shuffle">Random order</string>
    <string name="repeat_mode">Repeat mode</string>
    <string name="tools">Tools</string>
    <string name="mostra_app_utente">Show user apps</string>
    <string name="mostra_app_sistema">Show system apps</string>
    <string name="media_info">Media info</string>
    <string name="rete_locale">Local network</string>
    <string name="server_ftp">FTP server</string>
    <string name="crediti">Credits</string>
    <string name="traduzioni">Translations</string>
</resources>