<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/modifica"
        android:orderInCategory="2"
        android:title="@string/modifica"
        android:icon="@drawable/ic_create_white_24dp"
        app:showAsAction="always"/>

    <item
        android:id="@+id/salva"
        android:title="@string/salva"
        android:orderInCategory="100"
        android:icon="@drawable/menu_salva"
        app:showAsAction="always"/>

    <item
        android:id="@+id/salva_con_nome"
        android:title="@string/salva_con_nome"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/ricerca"
        android:checkable="true"
        android:orderInCategory="100"
        android:title="@string/ricerca"
        app:showAsAction="never"/>

    <item
        android:id="@+id/textsize"
        android:orderInCategory="100"
        android:title="@string/dimensione_testo"
        app:showAsAction="never"/>

    <item
        android:id="@+id/proprieta"
        android:orderInCategory="100"
        android:title="@string/proprieta"
        app:showAsAction="never"/>

    <item
        android:id="@+id/nuovo_file"
        android:orderInCategory="100"
        android:title="@string/nuovo_file"
        app:showAsAction="never"/>

</menu>