<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:padding="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ordina_per"
            android:textAllCaps="true"
            android:textColor="?attr/colorAccent"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="?attr/colorAccent"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RadioButton
                android:id="@+id/radio_ordina_nome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ordina_per_nome"/>

            <RadioButton
                android:id="@+id/radio_ordina_elementi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ordina_per_elementi"/>

            <RadioButton
                android:id="@+id/radio_ordina_dimensione"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ordina_per_dimensione"/>

        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/tipo_ordinamento"
            android:textAllCaps="true"
            android:textColor="?attr/colorAccent"
            android:textStyle="bold"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="5dp"
            android:background="?attr/colorAccent"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <RadioButton
                android:id="@+id/radio_ordina_crescente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ordinamento_crescente"/>

            <RadioButton
                android:id="@+id/radio_ordina_decrescente"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ordinamento_decrescente"/>

        </RadioGroup>
    </LinearLayout>

</ScrollView>