<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/filtro"
        android:orderInCategory="2"
        android:title="@string/filtro"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:icon="@drawable/ic_search_white_24dp"
        app:showAsAction="always|collapseActionView"/>

    <item
        android:id="@+id/mostra_app_utente"
        android:title="@string/mostra_app_utente"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/mostra_app_sistema"
        android:orderInCategory="100"
        android:title="@string/mostra_app_sistema"
        app:showAsAction="never"/>

</menu>