<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="20dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/organizza_per"
        android:textAllCaps="true"
        android:textColor="?attr/colorAccent"
        android:textStyle="bold"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:background="?attr/colorAccent"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/radio_cartella"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organizza_per_cartella"/>

        <RadioButton
            android:id="@+id/radio_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/organizza_per_album"/>
    </RadioGroup>
</LinearLayout>